--- a/paks/views/layouts/layout.handlebars
+++ b/paks/views/layouts/layout.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>PAKS</title>
+	<title>PASE</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
 </head>
@@ -13,7 +13,7 @@
             <img style="height: 50px; width: 70px;" src="/images/logo.png">
           </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="">PAKS</a></li>
+          <li class="active"><a href="">PASE</a></li>
           <li><a href="/">Dashboard</a></li>
           <li><a href="/users/register">Register</a></li>
           <li><a href="/users/change">Change Password</a></li>
