--- a/paks/views/index.handlebars
+++ b/paks/views/index.handlebars
@@ -2,7 +2,7 @@
   <div class="col-md-1 col-lg-1">
   </div>
   <div class="col-md-5 col-lg-5 alert alert-info">
-    <p style="text-align: justify; font-size : 12px;">This PAKS demonstrator allows users to use a single password registered with two servers to securely outsource files associated with (comma-separated) keywords and later search for and retrieve these files while preserving the privacy of the keywords. PAKS allows users to outsource and retrieve data from different devices. The demonstrator is implemented in JavaScript and can be executed on any platform and any (mobile) browser.
+    <p style="text-align: justify; font-size : 12px;">This PASE demonstrator allows users to use a single password registered with two servers to securely encrypt and outsource files associated with (comma-separated) encrypted keywords and later search for and retrieve these files while preserving the privacy of the keywords. PASE allows users to outsource and retrieve files from different devices. The demonstrator can be executed on any platform and any (mobile) browser.
 
     </p>
   </div>
@@ -22,44 +22,51 @@
 
 
 <div class="row">
+ 
   <div class="col-md-1 col-lg-1">
   </div>
-  <div class="col-md-5 col-lg-5">
-  <h4 class="page-header">Outsource</h4>
-    <form method="post" id="outsource">
-       <div class="form-group">
-        <label>Keyword(s)</label>
-        <input id="tag" type="text" class="form-control" name="tag" placeholder="text">
+
+  <div class="col-md-10 col-lg-10">
+    <div class="row">
+      <div id="info" class="alert alert-info">Status : Encrypted Files Retrieved</div>
+      <div class="col-md-6 col-lg-6">
+      <h4 class="page-header">Outsource</h4>
+        <form method="post" id="outsource">
+          <div class="form-group">
+            <label>Keyword(s)</label>
+            <input id="tag" type="text" class="form-control" name="tag" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Files</label>
+            <input id="upload-input" type="file" name="uploads[]" multiple="multiple">
+            <div class="alert alert-info" id="datain"></div>
+          </div>
+          {{!-- <div class="form-group">
+            <label for="comment">Message</label>
+            <textarea id="data" class="form-control" rows="3" id="data" name="data"></textarea>
+          </div> --}}
+          <img id="image1" src="/images/ajax-loader.gif">
+          <button type="submit" class="btn btn-success" disabled="disabled" id="outsourcebutton">Outsource</button>
+        </form>
       </div>
-      <div class="form-group">
-        <label>Files</label>
-        <input id="upload-input" type="file" name="uploads[]" multiple="multiple">
-        <div class="alert alert-info" id="datain"></div>
+      <div class="col-md-6 col-lg-6">
+        <h4 class="page-header">Retrieve</h4>
+        <form method="post" id="retrieve">
+          <div class="form-group">
+            <label>Keyword(s)</label>
+            <input id="tag1" type="text" class="form-control" name="tag" placeholder="text">
+          </div>
+          <img id="image2" src="/images/ajax-loader.gif">
+          <button type="submit" class="btn btn-success" disabled="disabled" id="retrievebutton">Retrieve</button>
+        </form>
+        <div id="dataout" class="alert alert-success">
+        <p>Retrieved data associated with the keywords: </p>
+        <table class="table table-hover" id="databody"> 
+          <tbody>
+          </tbody>
+        </table>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="comment">Message</label>
-        <textarea id="data" class="form-control" rows="3" id="data" name="data"></textarea>
-      </div>
-      <img id="image1" src="/images/ajax-loader.gif">
-      <button type="submit" class="btn btn-success" disabled="disabled" id="outsourcebutton">Outsource</button>
-    </form>
-  </div>
-  <div class="col-md-5 col-lg-5">
-    <h4 class="page-header">Retrieve</h4>
-    <form method="post" id="retrieve">
-      <div class="form-group">
-        <label>Keyword(s)</label>
-        <input id="tag1" type="text" class="form-control" name="tag" placeholder="text">
-      </div>
-      <img id="image2" src="/images/ajax-loader.gif">
-      <button type="submit" class="btn btn-success" disabled="disabled" id="retrievebutton">Retrieve</button>
-    </form>
-    <div id="dataout" class="alert alert-success">
-    <p>Retrieved data associated with the keywords: </p>
-    <table class="table table-hover" id="databody"> 
-      <tbody>
-      </tbody>
-    </table>
     </div>
   </div>
   <div class="col-md-1 col-lg-1">
